# manga-video-pipeline

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manga_pipeline.db  pyproject.toml  requirements-dev.txt  requirements.txt  test_auth.py  test_celery.py  test_config.py  test_dashboard.py  test_metadata.py  test_new_db.py  test_summarizer.py  test_telegram.py  test_tts.py  test_uploader.py  test_video.py
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  SETUP.md  TROUBLESHOOTING.md  cost_review.md  incident_response_runbook.md  security_checklist.md
infra/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  provider.tf  setup-backend.sh  terraform.tfvars.example  variables.tf
infra/step_functions/: FLOW_DIAGRAM.md  LAMBDA_FUNCTIONS.md  README.md  deploy.sh  pipeline.asl.json  validate.py
scripts/: Caddyfile  DEPLOYMENT.md  QUICKSTART.md  backup.sh  dashboard_userdata.sh  deploy.sh  deploy_dashboard.sh  setup.sh  setup_all_platforms.py  setup_facebook_auth.py  setup_telegram_bot.py  setup_tiktok_auth.py  setup_youtube_oauth.py
src/: __init__.py  celery_app.py  cli.py  config.py  db.py
src/ai/: manga_ai.py  metadata.py  summarizer.py  tts.py
src/cleanup/: __init__.py  handler.py
src/common/: config.py  db.py  logging_config.py  models.py  secrets.py  storage.py
src/dashboard/: README.md  __init__.py  app.py  auth.py  csrf.py  main.py  routes.py
src/database/: __init__.py  models.py  repository.py
src/discovery/: __init__.py  base.py  manager.py  manga_discovery.py  mangadex.py  webtoon.py
src/fetcher/: __init__.py  handler.py  mangadex_client.py  panel_downloader.py
src/notifications/: notification_service.py  telegram.py
src/pipeline/: main.py  tasks.py  workflow.py
src/renderer/: audio_merger.py  compositor.py  main.py  scene_builder.py  spot_handler.py
src/review_fetcher/: __init__.py  handler.py  scraper_factory.py
src/review_scriptgen/: __init__.py  handler.py  prompts.py
src/scheduler/: README.md  __init__.py  celery_app.py  jobs.py  quota_checker.py
src/scraper/: __init__.py  base.py  manager.py  manga_scraper.py  mangadex.py  webtoon.py
src/scriptgen/: __init__.py  deepinfra_client.py  handler.py  script_builder.py
src/ttsgen/: __init__.py  handler.py  segment_processor.py  tts_client.py
src/uploader/: __init__.py  base.py  facebook.py  handler.py  main.py  manager.py  metadata_generator.py  tiktok.py  upload_client.py  video_uploader.py  youtube.py  youtube_auth.py
src/video/: generator.py  manga_video_generator.py  utils.py
tests/: conftest.py  test_basic.py  test_suite_runner.py
tests/fixtures/: deepinfra_response.json  mangadex_chapters.json  mangadex_pages.json  mangadex_trending.json
tests/integration/: test_pipeline_short.py
(+102 files in other folders)
